Fix logging of sticky scrolling tree nodes https://bugs.webkit.org/show_bug.cgi?id=133670

Reviewed by Sam Weinig.

Source/WebCore:

ScrollingStateStickyNode::dumpProperties() dumped stickyBoxRect() twice and
didn't dump constrainingRectAtLastLayout(), so fix that.

* page/scrolling/ScrollingStateStickyNode.cpp:
(WebCore::ScrollingStateStickyNode::dumpProperties):

LayoutTests:

Rebaselined.

* platform/mac-wk2/tiled-drawing/scrolling/frames/coordinated-frame-expected.txt:
* platform/mac-wk2/tiled-drawing/scrolling/frames/coordinated-frame-in-fixed-expected.txt:
* platform/mac-wk2/tiled-drawing/scrolling/sticky/negative-scroll-offset-expected.txt:
* platform/mac-wk2/tiled-drawing/scrolling/sticky/sticky-horizontal-expected.txt:
* platform/mac-wk2/tiled-drawing/scrolling/sticky/sticky-vertical-expected.txt:


Canonical link: https://commits.webkit.org/151656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169745 268f45cc-cd09-0410-ab3c-d52691b4dbfc